Implemented a instructions bar on the top displaying Winner, Current Player, Next Player